[gd_scene load_steps=15 format=3 uid="uid://c32thv4437anr"]

[ext_resource type="Texture2D" uid="uid://chhtfwh1stgkx" path="res://assets/props/shop_anim.png" id="1_lx5au"]
[ext_resource type="Script" uid="uid://cyybmksf3h12j" path="res://scripts/shop.gd" id="1_xfvoa"]
[ext_resource type="Script" uid="uid://ciashmcush8dh" path="res://dialogues/shop_dialogue_manager.gd" id="3_1l46r"]
[ext_resource type="FontFile" uid="uid://dc22c7i6h0wfw" path="res://assets/fonts/Kenney Mini.ttf" id="4_032fp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xfvoa"]
atlas = ExtResource("1_lx5au")
region = Rect2(0, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l46r"]
atlas = ExtResource("1_lx5au")
region = Rect2(118, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_032fp"]
atlas = ExtResource("1_lx5au")
region = Rect2(236, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fc2m"]
atlas = ExtResource("1_lx5au")
region = Rect2(354, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r1wq"]
atlas = ExtResource("1_lx5au")
region = Rect2(472, 0, 118, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajxib"]
atlas = ExtResource("1_lx5au")
region = Rect2(590, 0, 118, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_y6sft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfvoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l46r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_032fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fc2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r1wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajxib")
}],
"loop": true,
"name": &"shop",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lx5au"]
size = Vector2(118, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfvoa"]
size = Vector2(108, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l46r"]
size = Vector2(106, 7)

[node name="Shop" type="StaticBody2D"]
script = ExtResource("1_xfvoa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y6sft")
animation = &"shop"
autoplay = "shop"
frame_progress = 0.316729

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_lx5au")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_xfvoa")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -16.5)
shape = SubResource("RectangleShape2D_1l46r")
one_way_collision = true

[node name="DialogueManager" type="Node" parent="."]
script = ExtResource("3_1l46r")
dialogue_path = "res://dialogues/shop_d.dialogue"

[node name="shop_label" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 3.0
offset_top = -52.0
offset_right = 53.0
offset_bottom = -29.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_032fp")
theme_override_font_sizes/font_size = 12
text = "Shop (E)"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
